@startuml
'https://plantuml.com/class-diagram

title Diagrama de Clase de relacion de Pregunta con Respuesta y Resultado
skinparam monochrome true
hide circle
skinparam classAttributeIconSize 0
abstract class Pregunta{
    -idPregunta
    -tema:String
    -texto:String
    -enunciado:String
    -opciones:ArrayList<String>
    -respuestaCorrecta:Respuesta
    -resultado:Resultado
    +Pregunta(int idPregunta, String tema, String enunciado, Respuesta respuestaCorrecta, ArrayList<String> opciones,
                            String texto)
    +responder(ArrayList<Respuesta>:respuestas):Resultado
    +mismold(int d):boolean
    +obtenerTema():String
    +obtenerIdPregunta():int
    +obtenerTextoRepuesta():String
    +obtenerEnunciado():String
    +obtenerOpciones():ArrayList<String>
    +obtenerTipoPregunta():String
    +equals(Object other):boolean
}
interface Respuesta{
    +Respuesta();
    +comparar(Respuesta respuesta);

}
class Resultado{
    -puntajeRonda:ArrayList<Integer>
    +agregarPuntos(int puntos):void
    +usarModificador(Modificador modificador, int jugadorPosicion):void;
    +obtenerPuntosDeJugador(int posicionJugador):int;
    +obtenerPuntosDeJugadores():List<Integer>
    +asignarPuntosALosJugador(ArrayList<jugador> jugadores):void
    +limpiarOpcionesDeAnteriorRonda():void
}
Pregunta --> Respuesta
Pregunta ..> Resultado


@enduml